cmake_minimum_required(VERSION 2.8)
add_executable(size size.cpp)
add_executable(cbr Call_by_reference.cpp)
add_executable(default_value default_function_value_variable.cpp)
add_executable(Trigon Trigonometry.cpp)
add_executable(Random Random.cpp)
add_executable(Array Array.cpp)
add_executable(str string.cpp)
add_executable(return_reference return_reference.cpp)
add_executable(struct struct.cpp)
add_executable(class Class.cpp)
add_executable(class_This ClassWithThisPointer.cpp)
add_executable(Namespace Namespace.cpp)
